Always record tracking metrics (#16779)
* Always record tracking metrics

* PR feedback